[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/Player.gd" type="Script" id=1]
[ext_resource path="res://src/SaveLoad.gd" type="Script" id=2]
[ext_resource path="res://src/StatsEdit.gd" type="Script" id=3]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 3.0

[sub_resource type="CapsuleShape" id=2]
height = 3.0

[sub_resource type="CylinderShape" id=3]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="ImageTexture" id=5]

[sub_resource type="ImageTexture" id=6]

[sub_resource type="ImageTexture" id=7]

[sub_resource type="ImageTexture" id=8]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.443137, 0.462745, 0.768627, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.443137, 0.462745, 0.768627, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.258824, 0.258824, 0.258824, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.258824, 0.258824, 0.258824, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="Theme" id=12]
Button/styles/disabled = SubResource( 13 )
Button/styles/focus = SubResource( 14 )
Button/styles/hover = SubResource( 15 )
Button/styles/normal = SubResource( 16 )
Button/styles/pressed = SubResource( 17 )
HSlider/icons/grabber = SubResource( 5 )
HSlider/icons/grabber_disabled = SubResource( 6 )
HSlider/icons/grabber_highlight = SubResource( 7 )
HSlider/icons/tick = SubResource( 8 )
HSlider/styles/grabber_area = SubResource( 9 )
HSlider/styles/grabber_area_highlight = SubResource( 10 )
HSlider/styles/slider = SubResource( 11 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.231373, 0.223529, 0.286275, 1 )
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Mesh_Player" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )

[node name="Collision_Player" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Foot_Player" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.53247, 0 )
shape = SubResource( 3 )

[node name="Head_Player" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.00539, 0 )

[node name="Camera_Player" type="Camera" parent="Head_Player"]

[node name="IsGrounded" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )

[node name="SaveLoad" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="StatsEdit" type="Panel" parent="."]
anchor_left = 0.016
anchor_top = 0.028
anchor_right = 0.016
anchor_bottom = 0.028
margin_left = -0.384001
margin_top = 0.199999
margin_right = 209.616
margin_bottom = 118.2
theme = SubResource( 12 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 3 )

[node name="SpeedSlider" type="HSlider" parent="StatsEdit"]
margin_left = 56.0
margin_top = 2.0
margin_right = 199.0
margin_bottom = 18.0
size_flags_vertical = 3
min_value = 10.0
value = 10.0

[node name="SpeedLabel" type="Label" parent="StatsEdit"]
margin_left = 4.0
margin_top = 3.0
margin_right = 43.0
margin_bottom = 18.0
text = "Speed:"

[node name="SaveButton" type="Button" parent="StatsEdit"]
margin_left = 10.0
margin_top = 86.0
margin_right = 73.0
margin_bottom = 106.0
action_mode = 0
text = "SAVE"

[node name="LoadButton" type="Button" parent="StatsEdit"]
margin_left = 87.0
margin_top = 86.0
margin_right = 150.0
margin_bottom = 106.0
action_mode = 0
text = "LOAD"

[connection signal="pressed" from="StatsEdit/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="StatsEdit/LoadButton" to="." method="_on_LoadButton_pressed"]
